# StyleTTS2-lite

./: .gitignore  README.md  inference.py  main.py  meldataset.py  models.py  pyproject.toml  requirements.txt  setup.cfg  text_utils.py  train.py  utils.py
Configs/: config.yaml  config_example.yaml
Demo/: del_training.ipynb  infer.py  requirements.txt  run.ipynb
Demo/Notebook/: run.ipynb
Demo/Space/: app.py
Extend/: extend.ipynb
Modules/: hifigan.py  istftnet.py  slmadv.py  vocos.py
ONNX/: export_onnx.py  inference_onnx.py  model_onnx.py  test.py  with_voicepacks.py
ONNX_test/: export_onnx.py  inference_onnx.py  run_onnx.ipynb
ONNX_test/Modules/ONNX/: hifigan.py  istftnet.py  utils.py
dummy_dataset/: train.txt
test/: cooking_new_weights.ipynb  inference_func.py  misaki_test.ipynb  quantization.ipynb  test.ipynb
